--- a/.env
+++ b/.env
@@ -3,7 +3,9 @@ MONGODB_URI = mongodb://localhost:27017/TechBee
 JWT_SECRET = 12345abcde
 NODE_ENV = development
 JUDGE0_API_URL=https://api.judge0.com
-JUDGE0_API_KEY = dd1b5cff07msh849ad5c374a09cdp1a29abjsnac2510d3fee9 
+JUDGE0_API_KEY = 2580b2a50bmsh9605bc6612e2077p124c7fjsn18f3aa52b774
 
 
 
+# 2580b2a50bmsh9605bc6612e2077p124c7fjsn18f3aa52b774
+# dd1b5cff07msh849ad5c374a09cdp1a29abjsnac2510d3fee9 
