--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ JWT_SECRET = 12345abcde
 NODE_ENV = development
 JUDGE0_API_URL=https://api.judge0.com
 JUDGE0_API_KEY = 8df4864d19msh568bf7be50b6b2ap1f427cjsnfd3fcdc9989f 
+
+# 31df7e0d7emsh62c36a2da55675fp10b9b8jsn7d572534aebe
