--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-select": "^5.7.3",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
     "uuid": "^9.0.0",
     "vite-plugin-node-polyfills": "^0.9.0"
   },
